-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
v5.0
-
Repl 2021-06-14
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Parse warning
A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
/src/mongo/db/read_write_concern_provenance.h:121: PW.USELESS_TYPE_QUALIFIER_ON_RETURN_TYPE 120120 type qualifier on return type is meaningless