SERVER-57142 Fix type qualifiers on return types in read_write_concern_provenance.h

(cherry picked from commit 3f00b0cd01d4231fd22820fe63bdae2511489eda)